@@ -3,6 +3,7 @@
 	* add buttons parameter to IMouseObserver::onMouseDown and IMouseObserver::onMouseMoved
 	* alphaPremultiply implementation for Direct2D IPlatformBitmapPixelAccess
 	* moved plug-in API specific files into plugin-bindings folder
+	* fix D2DDrawContext::drawPolygon
 
 2010-10-01 arne
 
